--- a/.gitignore
+++ b/.gitignore
@@ -155,6 +155,6 @@ gradle-app.setting
 .project
 .settings/
 bin/
-
+target/
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
